Closed Bug 1883810 Opened 7 months ago Closed 7 months ago

Assertion failure: mTexture, at /builds/worker/checkouts/gecko/dom/webgpu/CanvasContext.cpp:195

Categories

(Core :: Graphics: WebGPU, defect)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox123 --- disabled
firefox124 --- disabled
firefox125 --- fixed

People

(Reporter: tsmith, Assigned: ErichDonGubler)

References

(Blocks 1 open bug, Regressed 1 open bug)

Details

(Keywords: assertion, testcase)

Attachments

(3 files)

Attached file testcase.html

Found while fuzzing m-c 20240125-6497cc2893d1 (--enable-debug --enable-fuzzing)

This has only been reported on Windows.

To reproduce via Grizzly Replay:

$ pip install fuzzfetch grizzly-framework
$ python -m fuzzfetch -d --fuzzing -n firefox
$ python -m grizzly.replay.bugzilla ./firefox/firefox <bugid>

Assertion failure: mTexture, at /builds/worker/checkouts/gecko/dom/webgpu/CanvasContext.cpp:195

0|0|xul.dll|mozilla::webgpu::CanvasContext::MaybeQueueSwapChainPresent()|hg:hg.mozilla.org/mozilla-central:dom/webgpu/CanvasContext.cpp:63e18d5ef9ecb56ee260694de696c442f0bd5670|195|0x70
0|1|xul.dll|mozilla::webgpu::CommandBuffer::Commit()|hg:hg.mozilla.org/mozilla-central:dom/webgpu/CommandBuffer.cpp:63e18d5ef9ecb56ee260694de696c442f0bd5670|38|0x76
0|2|xul.dll|mozilla::webgpu::Queue::Submit(mozilla::dom::Sequence<mozilla::OwningNonNull<mozilla::webgpu::CommandBuffer> > const&)|hg:hg.mozilla.org/mozilla-central:dom/webgpu/Queue.cpp:63e18d5ef9ecb56ee260694de696c442f0bd5670|42|0xf0
0|3|xul.dll|mozilla::dom::GPUQueue_Binding::submit(JSContext*, JS::Handle<JSObject *>, void*, JSJitMethodCallArgs const&)|s3:gecko-generated-sources:d7fe9e23fc304392d72803e05ba10ccc5a9b4766984f4c22f9576b2904338cb26bc02fd2f9297a1a5d3c08089928651c71236cdc3b9b4746af5763f8928969fa/dom/bindings/WebGPUBinding.cpp:|22648|0x4d6
0|4|xul.dll|mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy,mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*)|hg:hg.mozilla.org/mozilla-central:dom/bindings/BindingUtils.cpp:63e18d5ef9ecb56ee260694de696c442f0bd5670|3258|0x1e6
0|5|xul.dll|CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:63e18d5ef9ecb56ee260694de696c442f0bd5670|479|0xf2
0|6|xul.dll|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:63e18d5ef9ecb56ee260694de696c442f0bd5670|573|0x2cf
0|7|xul.dll|js::jit::DoCallFallback(JSContext*, js::jit::BaselineFrame*, js::jit::ICFallbackStub*, unsigned int, JS::Value*, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/jit/BaselineIC.cpp:63e18d5ef9ecb56ee260694de696c442f0bd5670|1659|0x6b7
Flags: in-testsuite?

Unable to reproduce bug 1883810 using build mozilla-central 20240125094742-6497cc2893d1. Without a baseline, bugmon is unable to analyze this bug.
Removing bugmon keyword as no further action possible. Please review the bug and re-add the keyword for further analysis.

Keywords: bugmon
Assignee: nobody → egubler
Status: NEW → ASSIGNED
Pushed by egubler@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/10f6e9e62fc1 refactor(webgpu): subvert/targetContext/presentationContext for `CommandEncoder`s r=webgpu-reviewers,jimb https://hg.mozilla.org/integration/autoland/rev/91c44d2b3590 fix(webgpu): don't enqueue `OffscreenCanvas`es for presentation
Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
See Also: → 1885402
Regressed by: 1885402
No longer regressed by: 1885402
Regressions: 1885402
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: