Bug 1883810: fix(webgpu): don't enqueue `OffscreenCanvas`es for presentation

Differential Revision: https://phabricator.services.mozilla.com/D203960